# Patina

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  manifest.json
backend/: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  s.full.yaml  s.yaml
backend/patina/: __init__.py  config.py  db.py  demo.py  llm.py
backend/patina/api/: __init__.py  mappers.py  routes.py
backend/patina/extraction/: __init__.py  extract.py  schemas.py
backend/patina/mcp/: __init__.py  memory_server.py  registry_server.py
backend/patina/memory/: __init__.py  config.py  decay.py  distill.py  models.py  retrieval.py  schema.sql  store.py
backend/patina/pipeline/: __init__.py  consult.py  orchestrator.py  schema.sql  state.py  store.py
backend/patina/tools/: __init__.py  adjudicate.py  definitions.py  memory_tool.py  registry.py
backend/patina/validation/: __init__.py  rules.py
backend/proof_app/: server.py
backend/scripts/: demo_control.py  init_db.py  run_demo.py  smoke_test.py
backend/tests/: conftest.py  test_decay.py  test_retrieval.py  test_tools.py  test_validation.py
demo_data/: README.md  generate.py  generate_test.py
docs/: architecture.md  demo-script.md
web/app/: globals.css  layout.tsx  page.tsx
web/app/dashboard/: layout.tsx  page.tsx
web/components/app/: exception-card.tsx  field-table.tsx  intake-uploader.tsx  memory-explorer.tsx  metric-card.tsx  mobile-nav.tsx  page-header.tsx  pipeline-stepper.tsx  pipeline-view.tsx  review-item.tsx  sidebar.tsx
web/components/patina/: logo.tsx  (+4 more)
web/lib/: api.ts  data.ts
(+13 files in other folders)
